FIX - z-index for pencil

--- a/markup/components/program/program.scss
+++ b/markup/components/program/program.scss
@@ -4,7 +4,7 @@
   position: relative;
   max-width: 100%;
   min-width: 320px;
-  z-index: 10;
+  z-index: 2;
 }
 
 .program-wrapper {
